<resources>
    <string name="app_name">RofloBankomatVovastera</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_action">Выберите действие</string>
    <string name="log_in">Вход в систему</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="encashment">Инкассация</string>
    <string name="end_of_work">Завершение работы</string>
    <string name="find_balance">Узнать баланс</string>
    <string name="deposit_funds">Внести средства</string>
    <string name="withdraw_funds">Снять средства</string>
    <string name="log_out">Выход из системы</string>
    <string name="back_to_menu">Вернуться в меню</string>
    <string name="enter_deposit_amount">Введите сумму для внесения в банкомат:</string>
    <string name="hint_enter_amount">Введите сумму</string>
    <string name="invalid_format">Недопустимый формат</string>
    <string name="funds_deposited">Средства внесены</string>
    <string name="enter_withdraw_amount">Введите сумму для снятия с банкомата:</string>
    <string name="take_funds">Заберите средства</string>
    <string name="debit_funds">Списать средства</string>
    <string name="insufficient_funds">Недостаточно средств</string>
    <string name="enter_second_name">Введите фамилию пользователя:</string>
    <string name="hint_enter_second_name">Введите фамилию</string>
    <string name="enter_name">Введите имя пользователя:</string>
    <string name="hint_enter_name">Введите имя</string>
    <string name="enter_pin">Введите пин-код:</string>
    <string name="hint_enter_pin">Введите пин-код</string>
    <string name="data_entered_incorrectly">Данные введены некорректно</string>
    <string name="user_added">Пользователь добавлен</string>
    <string name="incorrect_pin_format">Некорректный формат pin-кода</string>
    <string name="user_already_added">Пользователь уже существует</string>
    <string name="input">Ввод</string>
    <string name="go_to_actions">Перейти к действиям</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="deposit_money">Внести деньги</string>
    <string name="withdraw_money">Снять деньги</string>
    <string name="get_history">Получить историю операций</string>
    <string name="enter_deposit_amount_user">Введите сумму для внесения на счёт:</string>
    <string name="enter_withdraw_amount_user">Введите сумму для списания со счёта:</string>
    <string name="debit_money">Списать деньги</string>
    <string name="take_money">Заберите деньги</string>
    <string name="sum_not_available">Сумма не доступна для снятия</string>
</resources>