<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".fragments.AddUserFragment">


    <TextView
        android:id="@+id/tv_enter_second_name"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_for_tv"
        android:gravity="center"
        android:text="@string/enter_second_name"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_enter_second_name"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/hint_enter_second_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_second_name" />

    <TextView
        android:id="@+id/tv_enter_name"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_for_tv"
        android:gravity="center"
        android:text="@string/enter_name"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_second_name" />

    <EditText
        android:id="@+id/et_enter_name"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/hint_enter_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_name"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/tv_enter_pin"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_for_tv"
        android:gravity="center"
        android:text="@string/enter_pin"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_name" />

    <EditText
        android:id="@+id/et_enter_pin"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/hint_enter_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_pin" />

    <TextView
        android:id="@+id/tv_add_user"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="36dp"
        android:layout_weight="1"
        android:background="@drawable/slim_border_for_tv"
        android:gravity="center"
        android:text="@string/add_user"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>