<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".fragments.MainMenuFragment">

    <TextView
        android:id="@+id/tv_choose_action"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_for_tv"
        android:gravity="center"
        android:text="@string/choose_action"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_action">

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/slim_border_for_tv"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/tv_add_user"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/slim_border_for_tv"
            android:text="@string/add_user" />


        <TextView
            android:id="@+id/tv_encashment"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/slim_border_for_tv"
            android:text="@string/encashment" />

        <TextView
            android:id="@+id/tv_end_of_work"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/slim_border_for_tv"
            android:text="@string/end_of_work" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>