<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".fragments.EncashmentWithdrawFragment">

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/border_for_tv"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/enter_withdraw_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_enter_amount"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:background="@drawable/edittext_border"
        android:hint="@string/hint_enter_amount"
        android:maxLength="9"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_deposit_funds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_balance" />

    <TextView
        android:id="@+id/tv_deposit_funds"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="160dp"
        android:layout_weight="1"
        android:background="@drawable/background_with_states"
        android:gravity="center"
        android:text="@string/debit_funds"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_back_to_menu"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="36dp"
        android:layout_weight="1"
        android:background="@drawable/background_with_states"
        android:gravity="center"
        android:text="@string/back_to_menu"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>